<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ToggleButton
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:textOff="edit"
            android:textOn="done" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complete_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ViewSwitcher
            android:id="@+id/completeNameViewSwitcher"
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <TextView
                android:id="@+id/completeNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/firstNameEditText"
                    android:layout_width="0dp"
                    android:hint="@string/first_name"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/lastNameEditText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:hint="@string/last_name"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </ViewSwitcher>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_mail"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ViewSwitcher
            android:id="@+id/mailViewSwitcher"
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <TextView
                android:id="@+id/mailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/mailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ViewSwitcher>
    </LinearLayout>
</ScrollView>